Fix overflow bug

--- a/crates/app/frontend/src/style.css
+++ b/crates/app/frontend/src/style.css
@@ -12,11 +12,11 @@ html {
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
   color: black;
 }
 
 #root {
-  min-height: 100%;
+  height: 100%;
   font-family: Lato, Avenir, Helvetica, Arial, sans-serif;
 }
